Revise README for Ad Auction Dashboard